# risk_path

./: .gitignore  CMakeLists.txt  README.md  main.cpp  risk_path.desktop  risk_path.sln
.github/workflows/: cmake-single-platform.yml  flawfinder.yml
UnitTest-risk_path/: UnitTest-risk_path.cpp  UnitTest-risk_path.vcxproj  UnitTest-risk_path.vcxproj.filters
UnitTest-risk_path/Debug/: CodeAnalysisResultManifest.txt  UnitTest-risk_path.dll.recipe  UnitTest-risk_path.ilk  UnitTest-risk_path.nativecodeanalysis.sarif  UnitTest-risk_path.nativecodeanalysis.xml  UnitTest-risk_path.pch  UnitTest-risk_path.pchast  UnitTest-risk_path.vcxproj.FileListAbsolute.txt  pch.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml  vc142.idb
UnitTest-risk_path/Debug/UnitTest.4A92EE05.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnitTest-risk_path.lastbuildstate  UnitTest-risk_path.write.1u.tlog  link.10832.delete.1.tlog  link.11600.delete.1.tlog  link.11896.delete.1.tlog  link.14364.delete.1.tlog  link.14484.delete.1.tlog  link.16404.delete.1.tlog  link.17912.delete.1.tlog  link.18484.delete.1.tlog  link.19452.delete.1.tlog  link.20888.delete.1.tlog  link.21808.delete.1.tlog  link.23224.delete.1.tlog  link.23412.delete.1.tlog  link.9008.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ressources/: Ressources.md  ghs_pop_random_sample_points.geojson  new.geojson  test.geojson
risk_path/: CustomOptimizationObjective.cpp  OptimizationObjective.cpp  Population.cpp  Population.h  Vector.cpp  Vector.h  main.cpp  risk_path.cpp  risk_path.h  risk_path.vcxproj  risk_path.vcxproj.filters
risk_path/x64/Debug/: vc142.idb
risk_path/x64/Debug/risk_path.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  risk_path.lastbuildstate
snap/: snapcraft.yaml
src/: CustomOptimizationObjective.cpp  Population.cpp  main.cpp  main.h
src/planning/: CMakeLists.txt  Coordinates.cpp  Coordinates.hpp  Population.cpp  Population.h  Vector.cpp  Vector.h  risk_path.cpp
src/planning/include/: risk_path.h
src/planning/src/: CustomOptimizationObjective.cpp
src/x64/Debug/: vc142.idb
tests/: testCoordinates.cpp  testPopulationMap.cpp  test_poputlation_map.cpp
x64/Debug/: risk_path.exp  risk_path.lib
